[project]
name = "rclog"
version = "1.3.2"
description = "A wrapper for the logging module in python."
authors = [{ name = "break-soul", email = "rouc@rouc.net" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/break-soul/rclog"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["yapf>=0.32.0"]


[tool.yapf]
based_on_style = "yapf"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 100

[tool.isort]
profile = "black"
line_length = 100
