[project]
name = "rclog"
version = "1.3.4"
description = "A wrapper for the logging module in python."
authors = [{ name = "break-soul", email = "rouc@rouc.net" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/break-soul/rclog"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.isort]
profile = "black"
line_length = 100
